# qaudrature

./: .gitignore  counter.py  encoder.py  encoder.v  pyproject.toml  steps.ipynb  steps.py  steps.v  test.ipynb  test.py  verilog.py
